# iterary-app

./: .dockerignore  .gitignore  Daily Log.md  README.md  SETUP.md  progress.md
backend/: ARCHITECTURE_MODELS_SCHEMAS.md  Dockerfile.backend  ENUMS_USAGE.md  MODELS_VS_SCHEMAS.md  Makefile  README.md  models_summary.md  pyproject.toml
backend/app/: main.py
backend/app/api/: trip_planner.py
backend/app/core/: config.py  database.py  db_init.py
backend/app/models/: __init__.py  enums.py  trip.py
backend/app/schemas/: trip_parser.py
backend/app/services/: trip_parser_simple.py
docker/: docker-compose.yml
frontend/: Dockerfile.frontend  README.md  package-lock.json  package.json
