[project]
name = "iterary_backend"
version = "0.1.0"
description = "Collaborative trip planning backend"
requires-python = ">=3.13,<3.14"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.121.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.14.3",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    # ML dependencies for fine-tuning
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.19.0",
]